# docstring-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test copy.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/sphinxcontrib/docstring-parser/: __init__.py  py_docstring_parser.py
