[metadata]
name = sphinxcontrib_docstring_parser
description = Sphinx Docstring Parser
version = "0.0.1"
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/AmbroiseGD/docstring-parser
author = Ambroise DELACROIX
author_email = ambroise.delacroix+SphinxDocParser@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation :: Sphinx
    Topic :: Utilities
download_url = http://pypi.python.org/pypi/sphinxcontrib-email
project_urls =
    GitHub: repo = https://github.com/AmbroiseGD/docstring-parser
    GitHub: issues  = https://github.com/AmbroiseGD/docstring-parser/issues

[options]
packages = find:
install_requires =
    Sphinx>=1.8
    sphinx_needs>=1.2.2
python_requires = >=3.8
include_package_data = True
package_dir =
    = src
platforms = any
zip_safe = False
# namespace_packages=["sphinxcontrib"]
[options.packages.find]
where = src

[aliases]
release = check -rs sdist bdist_wheel
